@@ -1,9 +1,9 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
-desktop_gnome_file_sharing.schemas.in
-file-share-properties.c
-file-share-properties.glade
-gnome-user-share-properties.desktop.in
-gnome-user-share.desktop.in.in
-http.c
-user_share.c
+data/desktop_gnome_file_sharing.schemas.in
+data/file-share-properties.glade
+data/gnome-user-share-properties.desktop.in
+data/gnome-user-share.desktop.in.in
+src/file-share-properties.c
+src/http.c
+src/user_share.c
