@@ -1,3 +1,3 @@
 # List of source files that should NOT be translated.
 # Please keep this file sorted alphabetically.
-gnome-user-share.desktop.in
+data/gnome-user-share.desktop.in
