@@ -1,3 +1,8 @@
+2008-02-29  Bastien Nocera  <hadess@hadess.net>
+
+	* POTFILES.in:
+	* POTFILES.skip: Update for new files location
+
 2008-02-27  Jaap Haitsma  <jaap@haitsma.org>
 
 	* LINGUAS: Do translations via LINGUAS file
